--- a/app/src/main/res/layout/fragment_car_brand.xml
+++ b/app/src/main/res/layout/fragment_car_brand.xml
@@ -30,4 +30,18 @@
 
     </RelativeLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="@color/colorAccent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabSize="auto"
+        app:tint="@android:color/white"
+        android:layout_gravity="bottom|end"/>
+
 </FrameLayout>
